--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Styling on em -->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b1e8873694.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
     <!-- fonts importing -->
@@ -21,7 +22,7 @@
 </head>
 <body>
     <header>
-        <h1>What height do you look</h1>
+        <h1 class = " animate__animated animate__backInDown">What height do you look</h1>
     </header>    
         <form>
         <h2>We're working this shit out</h2>
