Prototype 3a Fixing footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <option value="1">Regular - triangly</option>
         </select>
         <br>
-        <button type = "button" onclick = "calculateHeight()">Calculate what Height you look</button>
+        <button type = "button" onclick = "calculateHeight()">Find Out What Height you look</button>
         <h2>You look</h2>
         <h2 id = "outputID">...</h2>
         </form>
