--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
         <h2>You look</h2>
         <h2 id = "outputID">...</h2>
         </form>
+
+        <hr class="dashed">
+    <div class="biggie">
+        <h2>Images (kill me now)</h2>
+        <div class="img_holder">
+        <img src="Images/heightDiagram.png" alt="My Scientific Diagrams">
+        <img src="Images/TomCruiseEg.png" alt="Tom cruise elf man">
+        <img src="Images/ImSMall.png" alt="I'm very small">
+        </div>
         
+    </div>
     <footer>
             <p>Made by: Cal(A little, short, square, elf looking motherfucker)</p>
             <p>Contact us:thundercloudcomics148<br>@gmail.com</p>
