--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <option value="0.95">Square</option>
             <option value="1.1">Long Rectangle</option>
             <option value="1">Regular - triangly</option>
+            <option value="0.98">Curved</option>
         </select>
         <br>
         <button type = "button" onclick = "calculateHeight()">Find Out What Height you look</button>
