Trying to fix topnav

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
-        <div class="dropdown">
-    <i class="fas fa-bars dropdown Hpos "></i>
-        <div class="dropdown-content">
+        <div class="dropdown Hpos">
+    <i class="fas fa-bars dropdown "></i>
+        <div class="dropdown-content ">
           <a href="#main">Main</a>
           <a href="#Images">Images</a>
           <a href="#Footer">Footer</a>
