Topnav for shits and giggles

--- a/index.html
+++ b/index.html
@@ -26,17 +26,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
-        <div class="dropdown Hpos">
-    <i class="fas fa-bars dropdown "></i>
-        <div class="dropdown-content ">
+       <div class="topnav">
           <a href="#main">Main</a>
           <a href="#Images">Images</a>
           <a href="#Footer">Footer</a>
-        </div></div>
-    <header>
-        <h1 class = " animate__animated animate__backInDown">What height do you look</h1>
-    </header>    
-        <form>
+        </div>
+        <h1>What Height Do You Look Like</h1>
+        
+        <div class = "form">
         <h2 id = "main">We're working this shit out</h2>
         <p class = "label" for="actualHeight">Put in your height in cm</p>
         <input type="text" name="actualHeight" id="actualHeightID"><br>
@@ -52,7 +49,7 @@
         <button type = "button" onclick = "calculateHeight()">Find Out What Height you look</button>
         <h2>You look</h2>
         <h2 id = "outputID">...</h2>
-        </form>
+        </div>
 
     <div class="biggie">
         <h2 id = "Images">Images (kill me now)</h2>
@@ -75,5 +72,6 @@
             <a href="https://podcasts.apple.com/gb/podcast/the-pebble-podcast/id1552587218">The pebble podcast</a>
             </ul>
     </footer>
-</body>
+
+    </body>
 </html>
