A wee bit more functionality

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <option value="1">Regular - triangly</option>
             <option value="0.98">Curved</option>
         </select>
+        <p class="label">Are you a short person in denial</p>
+        <input type="checkbox" name="shortPersonInDenial" id="shortPersonInDenialID">
         <br>
         <button type = "button" onclick = "calculateHeight()">Find Out What Height you look</button>
         <h2>You look</h2>
